--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -505,7 +505,7 @@ legend{color:#056839;}
 .product-thumb .image {text-align: center; border:solid 1px #d0d0d0; position:relative;}
 .product-thumb .image a {display: block;}
 .product-thumb .image a:hover {opacity: 0.8;}
-.product-thumb .image img {margin-left: auto; margin-right: auto;}
+.product-thumb .image img {display:block;margin: auto;max-height:148px;}
 .product-grid .product-thumb .image {float: none;}
 .product-thumb .image .hover{position:absolute; top:0; left:0; width:100%; height:100%; text-align:center; background:rgba(232, 224, 224, 0.5); padding-top:70px; opacity:0; filter:alpha(opacity=0);}
 .product-thumb .image .hover button{width:50px; height:50px; background:#8dc63f; border:none; border-radius:100%; line-height:50px; text-align:center; font-size:24px; color:#fff; margin:0 3px;}
